[package]
name = "benchmarking_suite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
regex = "1.7.0"
starknet = "0.6.0"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
serde = "1.0.188"
serde_json = "1.0.107"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }


[[bench]]
name = "benchmark_v1"
harness = false

